--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,27 @@
-.App {
+body {
+  background: #fccb90;
+}
+
+#title {
+  font-family: "Michroma";
+  font-weight: 100;
+  color: gray;
+}
+.btn.nohover:hover {
+  /* here copy default .btn class styles */
+  cursor: default !important;
+
+  /* or something like that */
+}
+
+.buttons {
+  margin: 15px auto;
+  width: 700px;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.form-control:focus {
+  color: #495057 !important;
+  background-color: #fff !important;
+  border-color: #ced4da !important;
 }
